fix bug 938552 - Prevent too much spacing at the bottom of overheadIndicator boxes

--- a/media/redesign/stylus/wiki.styl
+++ b/media/redesign/stylus/wiki.styl
@@ -331,8 +331,13 @@ article {
   }
 }
 
-div.bug > *:last-child, div.warning > *:last-child {
-  compat-important(padding-left, inherit);
+div.bug, div.warning, div.overheadIndicator {
+  prevent-last-child-spacing('*', margin-bottom);
+  prevent-last-child-spacing('*', padding-bottom);
+
+  & > *:last-child {
+    compat-important(padding-left, inherit);
+  }
 }
 
 .warning {
